[TASK] Apply recommended changes of the code inspector
Change-Id: I78ff14a48fb9674e826bc237e96353bfd69eac13


(cherry picked from commit 4018ab28641c3e43ad7554f860e6e32555e8d1c3)

(cherry picked from commit c5c7cbba4c1f184096999b31fd6d91a6e97a6aa6)

(cherry picked from commit 85d9d869cd208edc71c67971248f6cc38422c5b4)

--- a/Resources/Private/Language/Cli/locallang.xlf
+++ b/Resources/Private/Language/Cli/locallang.xlf
@@ -61,7 +61,7 @@
 			<trans-unit id="email.goodbye.msg" xml:space="preserve">
 				<source>Kind regards,</source>
 			</trans-unit>
-			<trans-unit id="email.info.exportef_file.msg" xml:space="preserve">
+			<trans-unit id="email.info.exported_file.msg" xml:space="preserve">
 				<source>Exported file:</source>
 			</trans-unit>
 			<trans-unit id="email.new_translation_job_attached.msg" xml:space="preserve">
