--- a/Resources/Private/Language/Modules/LocalizationManager/it.locallang.xlf
+++ b/Resources/Private/Language/Modules/LocalizationManager/it.locallang.xlf
@@ -135,19 +135,12 @@
 				<target>Scarica file di configurazione</target>
 			</trans-unit>
 			<trans-unit id="inlineedit.save.alert.title" xml:space="preserve" approved="yes">
-				<source>You are about to create/update ALL localizations in this form?
-				Continue?
-			</source>
-				<target>Sta per creare/aggiornare TUTTE le traduzioni in questo modulo!
-				Continuare?
-			</target>
+				<source>You are about to create/update ALL localizations in this form? Continue?</source>
+				<target>Sta per creare/aggiornare TUTTE le traduzioni in questo modulo! Continuare?</target>
 			</trans-unit>
 			<trans-unit id="inlineedit.cancel.alert.title" xml:space="preserve" approved="yes">
-				<source>You are about to discard any changes you made. Continue?
-			</source>
-				<target>Sta per annullare tutte le modificazioni in questo modulo!
-				Continuare?
-			</target>
+				<source>You are about to discard any changes you made. Continue?</source>
+				<target>Sta per annullare tutte le modificazioni in questo modulo!Continuare?</target>
 			</trans-unit>
 			<trans-unit id="export.xml.headline.title" xml:space="preserve" approved="yes">
 				<source>Export</source>
