--- a/Resources/Private/Language/Modules/LocalizationManager/fr.locallang.xlf
+++ b/Resources/Private/Language/Modules/LocalizationManager/fr.locallang.xlf
@@ -134,19 +134,12 @@
 				<target>Télécharger fichier avec paramètres des balises</target>
 			</trans-unit>
 			<trans-unit id="inlineedit.save.alert.title" xml:space="preserve" approved="yes">
-				<source>You are about to create/update ALL localizations in this form?
-				Continue?
-			</source>
-				<target>Vous êtes en train de créer/actualiser TOUTES les traductions
-				dans ce formulaire! Souhaitez-vous continuer?
-			</target>
+				<source>You are about to create/update ALL localizations in this form? Continue?</source>
+				<target>Vous êtes en train de créer/actualiser TOUTES les traductions dans ce formulaire! Souhaitez-vous continuer?</target>
 			</trans-unit>
 			<trans-unit id="inlineedit.cancel.alert.title" xml:space="preserve" approved="yes">
-				<source>You are about to discard any changes you made. Continue?
-			</source>
-				<target>Vous êtes en train d'annuler tous les changements.
-				Souhaitez-vous continuer?
-			</target>
+				<source>You are about to discard any changes you made. Continue?</source>
+				<target>Vous êtes en train d'annuler tous les changements. Souhaitez-vous continuer?</target>
 			</trans-unit>
 			<trans-unit id="export.xml.headline.title" xml:space="preserve" approved="yes">
 				<source>Export</source>
